# Abyme

./: .gitignore  PLAN.md  README.md  a100_run_results.jsonl  setup.sh  visualize.sh
abyme-rllm/: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-light.txt  requirements.txt  setup.py
abyme-rllm/abyme/: README.md  __init__.py  batch_runner.py  core.py  engine.py  extraction.py  global_task_manager.py  magic.py  magic_prompt.py  model.py  recursive_engine.py  tokenization.py  tree_manager.py  tree_trace.py  utils.py  verifiers.py  vllm_model.py
abyme-rllm/abyme/pytorch_modules/: __init__.py  huggingface_model.py
abyme-rllm/benchmark/: __init__.py  aime_benchmark.py  base.py  frontier_math_benchmark.py  gsm8k_benchmark.py  math100_benchmark.py  math500_benchmark.py  math_full_benchmark.py  run_benchmark.py
abyme-rllm/scripts/: debug_bfs.py  prepare_datasets.py  test_utils_only.py
abyme-rllm/sft/: __init__.py  gen_training_data.py  generate_seed_problem.py  generate_training_dataset.py  load_sft_model.py  prompts.py  seed_problem copy.jsonl  seed_problems.jsonl  train.py  upload_training_data.py
abyme-rllm/sft/tests/: test_sft_syntax.py
abyme-rllm/sft/to_server/: fine_tune.py
abyme-rllm/sft/training/: fine_tune.py  gen_training_data.py  upload_training_data.py
abyme-rllm/tests/: __init__.py  test_engine.py  test_recursive_model.py  test_sft_model.py  test_verifiers.py
abyme-rllm/training/: __init__.py  data_generation.py  notifier.py  rate_trace.py  run_training.py  training_loop.py
abyme-rllm/training/recursiveGRPO/: data_generation.py  run_training.py  training_curriculum.py
abyme-rllm/training/restKTO/: __init__.py  data_generation.py  rate_trace.py  run_training.py  training_loop.py
abyme-rllm/venv-light/: pyvenv.cfg
abyme-visualizer/: README.md  app.py  config.py  requirements.txt  run  run.sh  setup.sh
abyme-visualizer/routes/: __init__.py  main.py  websocket.py
abyme-visualizer/static/css/: controls.css  sidebar.css  style.css  tree.css
abyme-visualizer/static/js/: chat.js  controls.js  logger.js  main.js  metrics.js  sidebar.js  socket_client.js  tree.js  tree_renderer.js
abyme-visualizer/templates/: index.html
abyme-visualizer/visualizer/: __init__.py  event_emitter.py  model_wrapper.py  tree_manager_events.py  tree_serializer.py
